// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableStat should extend the table to show all the elements 1`] = `
<Fragment>
  <Table
    className="table"
    hover={true}
    responsiveTag="div"
    tag="table"
  >
    <thead>
      <tr>
        <th
          className="user"
          key="0"
        >
          <span
            className="cell-wrapper"
          >
            AGENT
          </span>
        </th>
        <th
          className="string"
          key="1"
        >
          <span
            className="cell-wrapper"
          >
            TAGS
          </span>
        </th>
        <th
          className="number"
          key="2"
        >
          <span
            className="cell-wrapper"
          >
            NEW TICKETS #
          </span>
        </th>
        <th
          className="percent"
          key="3"
        >
          <span
            className="cell-wrapper"
          >
            PERCENT
          </span>
        </th>
        <th
          className="satisfaction-score"
          key="4"
        >
          <span
            className="cell-wrapper"
          >
            AGENT SCORE
          </span>
        </th>
        <th
          className="satisfaction-score"
          key="5"
        >
          <span
            className="cell-wrapper"
          >
            SURVEY SCORE
          </span>
        </th>
        <th
          className="delta"
          key="6"
        >
          <span
            className="cell-wrapper"
          >
            DELTA
          </span>
        </th>
        <th
          className="currency"
          key="7"
        >
          <span
            className="cell-wrapper"
          >
            SALES
          </span>
        </th>
        <th
          className="online-time"
          key="8"
        >
          <span
            className="cell-wrapper"
          >
            ONLINE TIME
          </span>
        </th>
        <th
          className="ticket-details"
          key="9"
        >
          <span
            className="cell-wrapper"
          >
            TICKET DETAILS
          </span>
        </th>
        <th
          className="customer-link"
          key="10"
        >
          <span
            className="cell-wrapper"
          >
            CUSTOMER LINK
          </span>
        </th>
        <th
          className="customer-link"
          key="11"
        >
          <span
            className="cell-wrapper"
          >
            CUSTOMER LINK - NULL
          </span>
        </th>
        <th
          className="satisfaction-survey-link"
          key="12"
        >
          <span
            className="cell-wrapper"
          >
            SATISFACTION SURVEY LINK
          </span>
        </th>
        <th
          className="satisfaction-survey-link"
          key="13"
        >
          <span
            className="cell-wrapper"
          >
            SATISFACTION SURVEY LINK - NULL
          </span>
        </th>
        <th
          className="satisfaction-survey-link"
          key="14"
        >
          <span
            className="cell-wrapper"
          >
            SATISFACTION SURVEY LINK - EMPTY SPACE COMMENT
          </span>
        </th>
        <th
          className="title-with-link"
          key="15"
        >
          <span
            className="cell-wrapper"
          >
            TITLE WITH LINK
          </span>
        </th>
        <th
          className="quick-response-automation-rate"
          key="16"
        >
          <span
            className="cell-wrapper"
          >
            QUICK RESPONSE AUTOMATION RATE
          </span>
        </th>
        <th
          className="article-recommendation-automation-rate"
          key="17"
        >
          <span
            className="cell-wrapper"
          >
            ARTICLE RECOMMENDATION AUTOMATION RATE
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        key="0"
      >
        <td
          className="lineCell user link-full-td"
          key="0"
        >
          <span
            className="cell-wrapper cell-content"
          >
            <div>
              <div
                className="userName"
              >
                Foo
              </div>
            </div>
          </span>
        </td>
        <td
          className="lineCell string link-full-td"
          key="1"
        >
          <span
            className="cell-wrapper cell-content"
          >
            refund
          </span>
        </td>
        <td
          className="lineCell number link-full-td"
          key="2"
        >
          <span
            className="cell-wrapper cell-content"
          >
            42
          </span>
        </td>
        <td
          className="lineCell percent link-full-td"
          key="3"
        >
          <span
            className="cell-wrapper cell-content"
          >
            12%
          </span>
        </td>
        <td
          className="lineCell satisfaction-score link-full-td"
          key="4"
        >
          <span
            className="cell-wrapper cell-content"
          >
            <DistributionVariantStat
              currentValue={93}
              maxValue={5}
              minValue={1}
              variant="star"
            />
          </span>
        </td>
        <td
          className="lineCell satisfaction-score link-full-td"
          key="5"
        >
          <span
            className="cell-wrapper cell-content"
          >
            <DistributionVariantStat
              currentValue={3}
              maxValue={5}
              minValue={1}
              variant="star"
            />
          </span>
        </td>
        <td
          className="lineCell delta link-full-td"
          key="6"
        >
          <span
            className="cell-wrapper cell-content"
          >
            <span>
              <span
                id="difference-0"
              >
                <StatPercentageDiff
                  label={-1}
                  percentage={-1}
                />
              </span>
              <Tooltip
                placement="top"
                target="difference-0"
              >
                Compared to: Oct 22, 2018 - Oct 23, 2018
              </Tooltip>
            </span>
          </span>
        </td>
        <td
          className="lineCell currency link-full-td"
          key="7"
        >
          <span
            className="cell-wrapper cell-content"
          >
            3.5
          </span>
        </td>
        <td
          className="lineCell online-time link-full-td"
          key="8"
        >
          <span
            className="cell-wrapper cell-content"
          >
            <div>
              <div
                className="statusDot isOnline"
                id="Online-time-tooltip-0"
              />
              <Tooltip
                target="Online-time-tooltip-0"
              >
                <b>
                  Timezone 
                </b>
                US/Pacific
                <br />
                Session started at
                 
                09:55 am
              </Tooltip>
              <span>
                4h 27m 
              </span>
            </div>
          </span>
        </td>
        <td
          className="lineCell ticket-details link-full-td"
          key="9"
        >
          <span
            className="cell-wrapper cell-content"
          >
            <div
              className="fit-cell"
            >
              <TicketDetailsStat
                agentId={1}
                agentName="Foo"
                channelsBreakdown={
                  Object {
                    "aircall": 10,
                    "api": 10,
                    "chat": 10,
                    "email": 11,
                    "facebook": 10,
                    "facebook-mention": 5,
                    "facebook-messenger": 5,
                    "facebook-recommendations": 5,
                    "instagram-ad-comment": 10,
                    "instagram-comment": 5,
                    "instagram-direct-message": 5,
                    "instagram-mention": 10,
                    "internal-note": 10,
                    "phone": 10,
                    "sms": 10,
                    "twitter": 10,
                    "twitter-direct-message": 5,
                    "yotpo-review": 10,
                  }
                }
                openTickets={51}
              />
            </div>
          </span>
        </td>
        <td
          className="lineCell customer-link link-full-td"
          key="10"
        >
          <span
            className="cell-wrapper cell-content"
          >
            <Link
              className="fit-cell"
              to="/app/customer/1"
            >
              John Doe
            </Link>
          </span>
        </td>
        <td
          className="lineCell customer-link link-full-td"
          key="11"
        >
          <span
            className="cell-wrapper cell-content"
          >
            <Link
              className="fit-cell"
              to="/app/customer/1"
            >
              Go to customer
            </Link>
          </span>
        </td>
        <td
          className="lineCell satisfaction-survey-link link-full-td"
          key="12"
        >
          <span
            className="cell-wrapper cell-content"
          >
            <Link
              to="/app/ticket/1#satisfactionSurvey"
            >
              Foo
            </Link>
          </span>
        </td>
        <td
          className="lineCell satisfaction-survey-link link-full-td"
          key="13"
        >
          <span
            className="cell-wrapper cell-content"
          >
            <Link
              to="/app/ticket/1#satisfactionSurvey"
            >
              Go to ticket
            </Link>
          </span>
        </td>
        <td
          className="lineCell satisfaction-survey-link link-full-td"
          key="14"
        >
          <span
            className="cell-wrapper cell-content"
          >
            <Link
              to="/app/ticket/1#satisfactionSurvey"
            >
              Go to ticket
            </Link>
          </span>
        </td>
        <td
          className="lineCell title-with-link link-full-td"
          key="15"
        >
          <span
            className="cell-wrapper cell-content"
          >
            Article Title
             
            <a
              className="material-icons-outlined openArticle"
              href="fake url"
              rel="noreferrer"
              target="_blank"
            >
              open_in_new
            </a>
          </span>
        </td>
        <td
          className="lineCell quick-response-automation-rate link-full-td"
          key="16"
        >
          <span
            className="cell-wrapper cell-content"
          >
            30
            %
             
            <span
              className="material-icons lowAutomationRateIcon"
              id="quick-response-automation-rate-0-tooltip"
            >
              error
            </span>
            <Tooltip
              placement="top"
              target="quick-response-automation-rate-0-tooltip"
            >
              Automation rate is low! Review 
              <br />
              tickets to improve your responses.
            </Tooltip>
          </span>
        </td>
        <td
          className="lineCell article-recommendation-automation-rate link-full-td"
          key="17"
        >
          <span
            className="cell-wrapper cell-content"
          >
            30
            %
             
            <span
              className="material-icons lowAutomationRateIcon"
              id="article-recommendation-automation-rate-0-tooltip"
            >
              error
            </span>
            <Tooltip
              placement="top"
              target="article-recommendation-automation-rate-0-tooltip"
            >
              Review tickets to ensure relevant 
              <br />
              questions are addressed by this article
            </Tooltip>
          </span>
        </td>
      </tr>
      <tr
        key="1"
      >
        <td
          className="lineCell user link-full-td"
          key="0"
        >
          <span
            className="cell-wrapper cell-content"
          >
            <div>
              <div
                className="userName"
              >
                Foo
              </div>
            </div>
          </span>
        </td>
        <td
          className="lineCell string link-full-td"
          key="1"
        >
          <span
            className="cell-wrapper cell-content"
          >
            refund
          </span>
        </td>
        <td
          className="lineCell number link-full-td"
          key="2"
        >
          <span
            className="cell-wrapper cell-content"
          >
            42
          </span>
        </td>
        <td
          className="lineCell percent link-full-td"
          key="3"
        >
          <span
            className="cell-wrapper cell-content"
          >
            12%
          </span>
        </td>
        <td
          className="lineCell satisfaction-score link-full-td"
          key="4"
        >
          <span
            className="cell-wrapper cell-content"
          >
            <DistributionVariantStat
              currentValue={93}
              maxValue={5}
              minValue={1}
              variant="star"
            />
          </span>
        </td>
        <td
          className="lineCell satisfaction-score link-full-td"
          key="5"
        >
          <span
            className="cell-wrapper cell-content"
          >
            <DistributionVariantStat
              currentValue={3}
              maxValue={5}
              minValue={1}
              variant="star"
            />
          </span>
        </td>
        <td
          className="lineCell delta link-full-td"
          key="6"
        >
          <span
            className="cell-wrapper cell-content"
          >
            <span>
              <span
                id="difference-1"
              >
                <StatPercentageDiff
                  label={-1}
                  percentage={-1}
                />
              </span>
              <Tooltip
                placement="top"
                target="difference-1"
              >
                Compared to: Oct 22, 2018 - Oct 23, 2018
              </Tooltip>
            </span>
          </span>
        </td>
        <td
          className="lineCell currency link-full-td"
          key="7"
        >
          <span
            className="cell-wrapper cell-content"
          >
            3.5
          </span>
        </td>
        <td
          className="lineCell online-time link-full-td"
          key="8"
        >
          <span
            className="cell-wrapper cell-content"
          >
            <div>
              <div
                className="statusDot isOnline"
                id="Online-time-tooltip-1"
              />
              <Tooltip
                target="Online-time-tooltip-1"
              >
                <b>
                  Timezone 
                </b>
                US/Pacific
                <br />
                Session started at
                 
                09:55 am
              </Tooltip>
              <span>
                4h 27m 
              </span>
            </div>
          </span>
        </td>
        <td
          className="lineCell ticket-details link-full-td"
          key="9"
        >
          <span
            className="cell-wrapper cell-content"
          >
            <div
              className="fit-cell"
            >
              <TicketDetailsStat
                agentId={1}
                agentName="Foo"
                channelsBreakdown={
                  Object {
                    "aircall": 10,
                    "api": 10,
                    "chat": 10,
                    "email": 11,
                    "facebook": 10,
                    "facebook-mention": 5,
                    "facebook-messenger": 5,
                    "facebook-recommendations": 5,
                    "instagram-ad-comment": 10,
                    "instagram-comment": 5,
                    "instagram-direct-message": 5,
                    "instagram-mention": 10,
                    "internal-note": 10,
                    "phone": 10,
                    "sms": 10,
                    "twitter": 10,
                    "twitter-direct-message": 5,
                    "yotpo-review": 10,
                  }
                }
                openTickets={51}
              />
            </div>
          </span>
        </td>
        <td
          className="lineCell customer-link link-full-td"
          key="10"
        >
          <span
            className="cell-wrapper cell-content"
          >
            <Link
              className="fit-cell"
              to="/app/customer/1"
            >
              John Doe
            </Link>
          </span>
        </td>
        <td
          className="lineCell customer-link link-full-td"
          key="11"
        >
          <span
            className="cell-wrapper cell-content"
          >
            <Link
              className="fit-cell"
              to="/app/customer/1"
            >
              Go to customer
            </Link>
          </span>
        </td>
        <td
          className="lineCell satisfaction-survey-link link-full-td"
          key="12"
        >
          <span
            className="cell-wrapper cell-content"
          >
            <Link
              to="/app/ticket/1#satisfactionSurvey"
            >
              Foo
            </Link>
          </span>
        </td>
        <td
          className="lineCell satisfaction-survey-link link-full-td"
          key="13"
        >
          <span
            className="cell-wrapper cell-content"
          >
            <Link
              to="/app/ticket/1#satisfactionSurvey"
            >
              Go to ticket
            </Link>
          </span>
        </td>
        <td
          className="lineCell satisfaction-survey-link link-full-td"
          key="14"
        >
          <span
            className="cell-wrapper cell-content"
          >
            <Link
              to="/app/ticket/1#satisfactionSurvey"
            >
              Go to ticket
            </Link>
          </span>
        </td>
        <td
          className="lineCell title-with-link link-full-td"
          key="15"
        >
          <span
            className="cell-wrapper cell-content"
          >
            Article Title
             
            <a
              className="material-icons-outlined openArticle"
              href="fake url"
              rel="noreferrer"
              target="_blank"
            >
              open_in_new
            </a>
          </span>
        </td>
        <td
          className="lineCell quick-response-automation-rate link-full-td"
          key="16"
        >
          <span
            className="cell-wrapper cell-content"
          >
            30
            %
             
            <span
              className="material-icons lowAutomationRateIcon"
              id="quick-response-automation-rate-1-tooltip"
            >
              error
            </span>
            <Tooltip
              placement="top"
              target="quick-response-automation-rate-1-tooltip"
            >
              Automation rate is low! Review 
              <br />
              tickets to improve your responses.
            </Tooltip>
          </span>
        </td>
        <td
          className="lineCell article-recommendation-automation-rate link-full-td"
          key="17"
        >
          <span
            className="cell-wrapper cell-content"
          >
            30
            %
             
            <span
              className="material-icons lowAutomationRateIcon"
              id="article-recommendation-automation-rate-1-tooltip"
            >
              error
            </span>
            <Tooltip
              placement="top"
              target="article-recommendation-automation-rate-1-tooltip"
            >
              Review tickets to ensure relevant 
              <br />
              questions are addressed by this article
            </Tooltip>
          </span>
        </td>
      </tr>
    </tbody>
  </Table>
  <button
    className="showLinesButton"
    onClick={[Function]}
  >
    <div>
      <img
        alt="Contract"
        className="mr-3"
        src="test-file-stub"
      />
      Show less
    </div>
  </button>
</Fragment>
`;

exports[`TableStat should render a table chart 1`] = `
<Fragment>
  <Table
    className="table"
    hover={true}
    responsiveTag="div"
    tag="table"
  >
    <thead>
      <tr>
        <th
          className="user"
          key="0"
        >
          <span
            className="cell-wrapper"
          >
            AGENT
          </span>
        </th>
        <th
          className="string"
          key="1"
        >
          <span
            className="cell-wrapper"
          >
            TAGS
          </span>
        </th>
        <th
          className="number"
          key="2"
        >
          <span
            className="cell-wrapper"
          >
            NEW TICKETS #
          </span>
        </th>
        <th
          className="percent"
          key="3"
        >
          <span
            className="cell-wrapper"
          >
            PERCENT
          </span>
        </th>
        <th
          className="satisfaction-score"
          key="4"
        >
          <span
            className="cell-wrapper"
          >
            AGENT SCORE
          </span>
        </th>
        <th
          className="satisfaction-score"
          key="5"
        >
          <span
            className="cell-wrapper"
          >
            SURVEY SCORE
          </span>
        </th>
        <th
          className="delta"
          key="6"
        >
          <span
            className="cell-wrapper"
          >
            DELTA
          </span>
        </th>
        <th
          className="currency"
          key="7"
        >
          <span
            className="cell-wrapper"
          >
            SALES
          </span>
        </th>
        <th
          className="online-time"
          key="8"
        >
          <span
            className="cell-wrapper"
          >
            ONLINE TIME
          </span>
        </th>
        <th
          className="ticket-details"
          key="9"
        >
          <span
            className="cell-wrapper"
          >
            TICKET DETAILS
          </span>
        </th>
        <th
          className="customer-link"
          key="10"
        >
          <span
            className="cell-wrapper"
          >
            CUSTOMER LINK
          </span>
        </th>
        <th
          className="customer-link"
          key="11"
        >
          <span
            className="cell-wrapper"
          >
            CUSTOMER LINK - NULL
          </span>
        </th>
        <th
          className="satisfaction-survey-link"
          key="12"
        >
          <span
            className="cell-wrapper"
          >
            SATISFACTION SURVEY LINK
          </span>
        </th>
        <th
          className="satisfaction-survey-link"
          key="13"
        >
          <span
            className="cell-wrapper"
          >
            SATISFACTION SURVEY LINK - NULL
          </span>
        </th>
        <th
          className="satisfaction-survey-link"
          key="14"
        >
          <span
            className="cell-wrapper"
          >
            SATISFACTION SURVEY LINK - EMPTY SPACE COMMENT
          </span>
        </th>
        <th
          className="title-with-link"
          key="15"
        >
          <span
            className="cell-wrapper"
          >
            TITLE WITH LINK
          </span>
        </th>
        <th
          className="quick-response-automation-rate"
          key="16"
        >
          <span
            className="cell-wrapper"
          >
            QUICK RESPONSE AUTOMATION RATE
          </span>
        </th>
        <th
          className="article-recommendation-automation-rate"
          key="17"
        >
          <span
            className="cell-wrapper"
          >
            ARTICLE RECOMMENDATION AUTOMATION RATE
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        key="0"
      >
        <td
          className="lineCell user link-full-td"
          key="0"
        >
          <span
            className="cell-wrapper cell-content"
          >
            <div>
              <div
                className="userName"
              >
                Foo
              </div>
            </div>
          </span>
        </td>
        <td
          className="lineCell string link-full-td"
          key="1"
        >
          <span
            className="cell-wrapper cell-content"
          >
            refund
          </span>
        </td>
        <td
          className="lineCell number link-full-td"
          key="2"
        >
          <span
            className="cell-wrapper cell-content"
          >
            42
          </span>
        </td>
        <td
          className="lineCell percent link-full-td"
          key="3"
        >
          <span
            className="cell-wrapper cell-content"
          >
            12%
          </span>
        </td>
        <td
          className="lineCell satisfaction-score link-full-td"
          key="4"
        >
          <span
            className="cell-wrapper cell-content"
          >
            <DistributionVariantStat
              currentValue={93}
              maxValue={5}
              minValue={1}
              variant="star"
            />
          </span>
        </td>
        <td
          className="lineCell satisfaction-score link-full-td"
          key="5"
        >
          <span
            className="cell-wrapper cell-content"
          >
            <DistributionVariantStat
              currentValue={3}
              maxValue={5}
              minValue={1}
              variant="star"
            />
          </span>
        </td>
        <td
          className="lineCell delta link-full-td"
          key="6"
        >
          <span
            className="cell-wrapper cell-content"
          >
            <span>
              <span
                id="difference-0"
              >
                <StatPercentageDiff
                  label={-1}
                  percentage={-1}
                />
              </span>
              <Tooltip
                placement="top"
                target="difference-0"
              >
                Compared to: Oct 22, 2018 - Oct 23, 2018
              </Tooltip>
            </span>
          </span>
        </td>
        <td
          className="lineCell currency link-full-td"
          key="7"
        >
          <span
            className="cell-wrapper cell-content"
          >
            3.5
          </span>
        </td>
        <td
          className="lineCell online-time link-full-td"
          key="8"
        >
          <span
            className="cell-wrapper cell-content"
          >
            <div>
              <div
                className="statusDot isOnline"
                id="Online-time-tooltip-0"
              />
              <Tooltip
                target="Online-time-tooltip-0"
              >
                <b>
                  Timezone 
                </b>
                US/Pacific
                <br />
                Session started at
                 
                09:55 am
              </Tooltip>
              <span>
                4h 27m 
              </span>
            </div>
          </span>
        </td>
        <td
          className="lineCell ticket-details link-full-td"
          key="9"
        >
          <span
            className="cell-wrapper cell-content"
          >
            <div
              className="fit-cell"
            >
              <TicketDetailsStat
                agentId={1}
                agentName="Foo"
                channelsBreakdown={
                  Object {
                    "aircall": 10,
                    "api": 10,
                    "chat": 10,
                    "email": 11,
                    "facebook": 10,
                    "facebook-mention": 5,
                    "facebook-messenger": 5,
                    "facebook-recommendations": 5,
                    "instagram-ad-comment": 10,
                    "instagram-comment": 5,
                    "instagram-direct-message": 5,
                    "instagram-mention": 10,
                    "internal-note": 10,
                    "phone": 10,
                    "sms": 10,
                    "twitter": 10,
                    "twitter-direct-message": 5,
                    "yotpo-review": 10,
                  }
                }
                openTickets={51}
              />
            </div>
          </span>
        </td>
        <td
          className="lineCell customer-link link-full-td"
          key="10"
        >
          <span
            className="cell-wrapper cell-content"
          >
            <Link
              className="fit-cell"
              to="/app/customer/1"
            >
              John Doe
            </Link>
          </span>
        </td>
        <td
          className="lineCell customer-link link-full-td"
          key="11"
        >
          <span
            className="cell-wrapper cell-content"
          >
            <Link
              className="fit-cell"
              to="/app/customer/1"
            >
              Go to customer
            </Link>
          </span>
        </td>
        <td
          className="lineCell satisfaction-survey-link link-full-td"
          key="12"
        >
          <span
            className="cell-wrapper cell-content"
          >
            <Link
              to="/app/ticket/1#satisfactionSurvey"
            >
              Foo
            </Link>
          </span>
        </td>
        <td
          className="lineCell satisfaction-survey-link link-full-td"
          key="13"
        >
          <span
            className="cell-wrapper cell-content"
          >
            <Link
              to="/app/ticket/1#satisfactionSurvey"
            >
              Go to ticket
            </Link>
          </span>
        </td>
        <td
          className="lineCell satisfaction-survey-link link-full-td"
          key="14"
        >
          <span
            className="cell-wrapper cell-content"
          >
            <Link
              to="/app/ticket/1#satisfactionSurvey"
            >
              Go to ticket
            </Link>
          </span>
        </td>
        <td
          className="lineCell title-with-link link-full-td"
          key="15"
        >
          <span
            className="cell-wrapper cell-content"
          >
            Article Title
             
            <a
              className="material-icons-outlined openArticle"
              href="fake url"
              rel="noreferrer"
              target="_blank"
            >
              open_in_new
            </a>
          </span>
        </td>
        <td
          className="lineCell quick-response-automation-rate link-full-td"
          key="16"
        >
          <span
            className="cell-wrapper cell-content"
          >
            30
            %
             
            <span
              className="material-icons lowAutomationRateIcon"
              id="quick-response-automation-rate-0-tooltip"
            >
              error
            </span>
            <Tooltip
              placement="top"
              target="quick-response-automation-rate-0-tooltip"
            >
              Automation rate is low! Review 
              <br />
              tickets to improve your responses.
            </Tooltip>
          </span>
        </td>
        <td
          className="lineCell article-recommendation-automation-rate link-full-td"
          key="17"
        >
          <span
            className="cell-wrapper cell-content"
          >
            30
            %
             
            <span
              className="material-icons lowAutomationRateIcon"
              id="article-recommendation-automation-rate-0-tooltip"
            >
              error
            </span>
            <Tooltip
              placement="top"
              target="article-recommendation-automation-rate-0-tooltip"
            >
              Review tickets to ensure relevant 
              <br />
              questions are addressed by this article
            </Tooltip>
          </span>
        </td>
      </tr>
    </tbody>
  </Table>
</Fragment>
`;

exports[`TableStat should render a table chart with "no data" message 1`] = `
<div
  className="text-muted"
>
  There is no data for this period.
</div>
`;

exports[`TableStat should render a table with the expand button and one line visible 1`] = `
<Fragment>
  <Table
    className="table"
    hover={true}
    responsiveTag="div"
    tag="table"
  >
    <thead>
      <tr>
        <th
          className="user"
          key="0"
        >
          <span
            className="cell-wrapper"
          >
            AGENT
          </span>
        </th>
        <th
          className="string"
          key="1"
        >
          <span
            className="cell-wrapper"
          >
            TAGS
          </span>
        </th>
        <th
          className="number"
          key="2"
        >
          <span
            className="cell-wrapper"
          >
            NEW TICKETS #
          </span>
        </th>
        <th
          className="percent"
          key="3"
        >
          <span
            className="cell-wrapper"
          >
            PERCENT
          </span>
        </th>
        <th
          className="satisfaction-score"
          key="4"
        >
          <span
            className="cell-wrapper"
          >
            AGENT SCORE
          </span>
        </th>
        <th
          className="satisfaction-score"
          key="5"
        >
          <span
            className="cell-wrapper"
          >
            SURVEY SCORE
          </span>
        </th>
        <th
          className="delta"
          key="6"
        >
          <span
            className="cell-wrapper"
          >
            DELTA
          </span>
        </th>
        <th
          className="currency"
          key="7"
        >
          <span
            className="cell-wrapper"
          >
            SALES
          </span>
        </th>
        <th
          className="online-time"
          key="8"
        >
          <span
            className="cell-wrapper"
          >
            ONLINE TIME
          </span>
        </th>
        <th
          className="ticket-details"
          key="9"
        >
          <span
            className="cell-wrapper"
          >
            TICKET DETAILS
          </span>
        </th>
        <th
          className="customer-link"
          key="10"
        >
          <span
            className="cell-wrapper"
          >
            CUSTOMER LINK
          </span>
        </th>
        <th
          className="customer-link"
          key="11"
        >
          <span
            className="cell-wrapper"
          >
            CUSTOMER LINK - NULL
          </span>
        </th>
        <th
          className="satisfaction-survey-link"
          key="12"
        >
          <span
            className="cell-wrapper"
          >
            SATISFACTION SURVEY LINK
          </span>
        </th>
        <th
          className="satisfaction-survey-link"
          key="13"
        >
          <span
            className="cell-wrapper"
          >
            SATISFACTION SURVEY LINK - NULL
          </span>
        </th>
        <th
          className="satisfaction-survey-link"
          key="14"
        >
          <span
            className="cell-wrapper"
          >
            SATISFACTION SURVEY LINK - EMPTY SPACE COMMENT
          </span>
        </th>
        <th
          className="title-with-link"
          key="15"
        >
          <span
            className="cell-wrapper"
          >
            TITLE WITH LINK
          </span>
        </th>
        <th
          className="quick-response-automation-rate"
          key="16"
        >
          <span
            className="cell-wrapper"
          >
            QUICK RESPONSE AUTOMATION RATE
          </span>
        </th>
        <th
          className="article-recommendation-automation-rate"
          key="17"
        >
          <span
            className="cell-wrapper"
          >
            ARTICLE RECOMMENDATION AUTOMATION RATE
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        key="0"
      >
        <td
          className="lineCell user link-full-td"
          key="0"
        >
          <span
            className="cell-wrapper cell-content"
          >
            <div>
              <div
                className="userName"
              >
                Foo
              </div>
            </div>
          </span>
        </td>
        <td
          className="lineCell string link-full-td"
          key="1"
        >
          <span
            className="cell-wrapper cell-content"
          >
            refund
          </span>
        </td>
        <td
          className="lineCell number link-full-td"
          key="2"
        >
          <span
            className="cell-wrapper cell-content"
          >
            42
          </span>
        </td>
        <td
          className="lineCell percent link-full-td"
          key="3"
        >
          <span
            className="cell-wrapper cell-content"
          >
            12%
          </span>
        </td>
        <td
          className="lineCell satisfaction-score link-full-td"
          key="4"
        >
          <span
            className="cell-wrapper cell-content"
          >
            <DistributionVariantStat
              currentValue={93}
              maxValue={5}
              minValue={1}
              variant="star"
            />
          </span>
        </td>
        <td
          className="lineCell satisfaction-score link-full-td"
          key="5"
        >
          <span
            className="cell-wrapper cell-content"
          >
            <DistributionVariantStat
              currentValue={3}
              maxValue={5}
              minValue={1}
              variant="star"
            />
          </span>
        </td>
        <td
          className="lineCell delta link-full-td"
          key="6"
        >
          <span
            className="cell-wrapper cell-content"
          >
            <span>
              <span
                id="difference-0"
              >
                <StatPercentageDiff
                  label={-1}
                  percentage={-1}
                />
              </span>
              <Tooltip
                placement="top"
                target="difference-0"
              >
                Compared to: Oct 22, 2018 - Oct 23, 2018
              </Tooltip>
            </span>
          </span>
        </td>
        <td
          className="lineCell currency link-full-td"
          key="7"
        >
          <span
            className="cell-wrapper cell-content"
          >
            3.5
          </span>
        </td>
        <td
          className="lineCell online-time link-full-td"
          key="8"
        >
          <span
            className="cell-wrapper cell-content"
          >
            <div>
              <div
                className="statusDot isOnline"
                id="Online-time-tooltip-0"
              />
              <Tooltip
                target="Online-time-tooltip-0"
              >
                <b>
                  Timezone 
                </b>
                US/Pacific
                <br />
                Session started at
                 
                09:55 am
              </Tooltip>
              <span>
                4h 27m 
              </span>
            </div>
          </span>
        </td>
        <td
          className="lineCell ticket-details link-full-td"
          key="9"
        >
          <span
            className="cell-wrapper cell-content"
          >
            <div
              className="fit-cell"
            >
              <TicketDetailsStat
                agentId={1}
                agentName="Foo"
                channelsBreakdown={
                  Object {
                    "aircall": 10,
                    "api": 10,
                    "chat": 10,
                    "email": 11,
                    "facebook": 10,
                    "facebook-mention": 5,
                    "facebook-messenger": 5,
                    "facebook-recommendations": 5,
                    "instagram-ad-comment": 10,
                    "instagram-comment": 5,
                    "instagram-direct-message": 5,
                    "instagram-mention": 10,
                    "internal-note": 10,
                    "phone": 10,
                    "sms": 10,
                    "twitter": 10,
                    "twitter-direct-message": 5,
                    "yotpo-review": 10,
                  }
                }
                openTickets={51}
              />
            </div>
          </span>
        </td>
        <td
          className="lineCell customer-link link-full-td"
          key="10"
        >
          <span
            className="cell-wrapper cell-content"
          >
            <Link
              className="fit-cell"
              to="/app/customer/1"
            >
              John Doe
            </Link>
          </span>
        </td>
        <td
          className="lineCell customer-link link-full-td"
          key="11"
        >
          <span
            className="cell-wrapper cell-content"
          >
            <Link
              className="fit-cell"
              to="/app/customer/1"
            >
              Go to customer
            </Link>
          </span>
        </td>
        <td
          className="lineCell satisfaction-survey-link link-full-td"
          key="12"
        >
          <span
            className="cell-wrapper cell-content"
          >
            <Link
              to="/app/ticket/1#satisfactionSurvey"
            >
              Foo
            </Link>
          </span>
        </td>
        <td
          className="lineCell satisfaction-survey-link link-full-td"
          key="13"
        >
          <span
            className="cell-wrapper cell-content"
          >
            <Link
              to="/app/ticket/1#satisfactionSurvey"
            >
              Go to ticket
            </Link>
          </span>
        </td>
        <td
          className="lineCell satisfaction-survey-link link-full-td"
          key="14"
        >
          <span
            className="cell-wrapper cell-content"
          >
            <Link
              to="/app/ticket/1#satisfactionSurvey"
            >
              Go to ticket
            </Link>
          </span>
        </td>
        <td
          className="lineCell title-with-link link-full-td"
          key="15"
        >
          <span
            className="cell-wrapper cell-content"
          >
            Article Title
             
            <a
              className="material-icons-outlined openArticle"
              href="fake url"
              rel="noreferrer"
              target="_blank"
            >
              open_in_new
            </a>
          </span>
        </td>
        <td
          className="lineCell quick-response-automation-rate link-full-td"
          key="16"
        >
          <span
            className="cell-wrapper cell-content"
          >
            30
            %
             
            <span
              className="material-icons lowAutomationRateIcon"
              id="quick-response-automation-rate-0-tooltip"
            >
              error
            </span>
            <Tooltip
              placement="top"
              target="quick-response-automation-rate-0-tooltip"
            >
              Automation rate is low! Review 
              <br />
              tickets to improve your responses.
            </Tooltip>
          </span>
        </td>
        <td
          className="lineCell article-recommendation-automation-rate link-full-td"
          key="17"
        >
          <span
            className="cell-wrapper cell-content"
          >
            30
            %
             
            <span
              className="material-icons lowAutomationRateIcon"
              id="article-recommendation-automation-rate-0-tooltip"
            >
              error
            </span>
            <Tooltip
              placement="top"
              target="article-recommendation-automation-rate-0-tooltip"
            >
              Review tickets to ensure relevant 
              <br />
              questions are addressed by this article
            </Tooltip>
          </span>
        </td>
      </tr>
    </tbody>
  </Table>
  <button
    className="showLinesButton"
    onClick={[Function]}
  >
    <div>
      <img
        alt="Expand"
        className="mr-3"
        src="test-file-stub"
      />
      Show More
    </div>
  </button>
</Fragment>
`;
